force-app/main/default/objects/SFDC_Projects__c/SFDC_Projects__c.object-meta.xml
<CustomObject>
    <description>A professional services engagement that tracks all related Resources and Project details.</description>
    <label>Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>