force-app/main/default/objects/SFDC_Projects__c/fields/Accounts__c.field-meta.xml
<CustomField>
    <fullName>Accounts__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Accounts</label>
    <type>Checkbox</type>
</CustomField>