force-app/main/default/objects/SFDC_Projects__c/fields/Acquired_Courtesy_Licenses__c.field-meta.xml
<CustomField>
    <fullName>Acquired_Courtesy_Licenses__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acquired Courtesy Licenses</label>
    <type>Checkbox</type>
</CustomField>