force-app/main/default/objects/SFDC_Projects__c/fields/Asked_client_for_login__c.field-meta.xml
<CustomField>
    <fullName>Asked_client_for_login__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Asked client for login</label>
    <type>Checkbox</type>
</CustomField>