force-app/main/default/objects/SFDC_Projects__c/fields/Assets__c.field-meta.xml
<CustomField>
    <fullName>Assets__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assets</label>
    <type>Checkbox</type>
</CustomField>