force-app/main/default/objects/SFDC_Projects__c/fields/Billing__c.field-meta.xml
<CustomField>
    <fullName>Billing__c</fullName>
    <label>Billing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>T&amp;M</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>