force-app/main/default/objects/SFDC_Projects__c/fields/Business_Model__c.field-meta.xml
<CustomField>
    <fullName>Business_Model__c</fullName>
    <label>Business Model</label>
    <type>TextArea</type>
</CustomField>