force-app/main/default/objects/SFDC_Projects__c/fields/Campaigns__c.field-meta.xml
<CustomField>
    <fullName>Campaigns__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Campaigns</label>
    <type>Checkbox</type>
</CustomField>