force-app/main/default/objects/SFDC_Projects__c/fields/Cases__c.field-meta.xml
<CustomField>
    <fullName>Cases__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cases</label>
    <type>Checkbox</type>
</CustomField>