force-app/main/default/objects/SFDC_Projects__c/fields/Condition_1__c.field-meta.xml
<CustomField>
    <fullName>Condition_1__c</fullName>
    <label>Condition 1</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>