force-app/main/default/objects/SFDC_Projects__c/fields/Condition_2__c.field-meta.xml
<CustomField>
    <fullName>Condition_2__c</fullName>
    <label>Condition 2</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>