force-app/main/default/objects/SFDC_Projects__c/fields/Condition_3__c.field-meta.xml
<CustomField>
    <fullName>Condition_3__c</fullName>
    <label>Condition 3</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>