force-app/main/default/objects/SFDC_Projects__c/fields/Contracts__c.field-meta.xml
<CustomField>
    <fullName>Contracts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contracts</label>
    <type>Checkbox</type>
</CustomField>