force-app/main/default/objects/SFDC_Projects__c/fields/Custom_Objects__c.field-meta.xml
<CustomField>
    <fullName>Custom_Objects__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Objects</label>
    <type>Checkbox</type>
</CustomField>