force-app/main/default/objects/SFDC_Projects__c/fields/Dashboards__c.field-meta.xml
<CustomField>
    <fullName>Dashboards__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Dashboards</label>
    <type>Checkbox</type>
</CustomField>