force-app/main/default/objects/SFDC_Projects__c/fields/Finished_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Finished_Configuration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finished Configuration</label>
    <type>Checkbox</type>
</CustomField>