force-app/main/default/objects/SFDC_Projects__c/fields/If_PE_Mkt_Licenses__c.field-meta.xml
<CustomField>
    <fullName>If_PE_Mkt_Licenses__c</fullName>
    <label>If PE, # Mkt Licenses</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>