force-app/main/default/objects/SFDC_Projects__c/fields/If_PE_other_add_ons__c.field-meta.xml
<CustomField>
    <fullName>If_PE_other_add_ons__c</fullName>
    <label>If PE, other add-ons</label>
    <length>120</length>
    <type>Text</type>
</CustomField>