force-app/main/default/objects/SFDC_Projects__c/fields/Licenses__c.field-meta.xml
<CustomField>
    <fullName>Licenses__c</fullName>
    <label># Licenses</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>