force-app/main/default/objects/SFDC_Projects__c/fields/Loaded_Data__c.field-meta.xml
<CustomField>
    <fullName>Loaded_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loaded Data</label>
    <type>Checkbox</type>
</CustomField>