force-app/main/default/objects/SFDC_Projects__c/fields/Note_10__c.field-meta.xml
<CustomField>
    <fullName>Note_10__c</fullName>
    <label>Note 10</label>
    <length>60</length>
    <type>Text</type>
</CustomField>