force-app/main/default/objects/SFDC_Projects__c/fields/Note_11__c.field-meta.xml
<CustomField>
    <fullName>Note_11__c</fullName>
    <label>Note 11</label>
    <length>60</length>
    <type>Text</type>
</CustomField>