force-app/main/default/objects/SFDC_Projects__c/fields/Note_12__c.field-meta.xml
<CustomField>
    <fullName>Note_12__c</fullName>
    <label>Note 12</label>
    <length>60</length>
    <type>Text</type>
</CustomField>