force-app/main/default/objects/SFDC_Projects__c/fields/Onsite_travel_expected__c.field-meta.xml
<CustomField>
    <fullName>Onsite_travel_expected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Onsite travel expected</label>
    <type>Checkbox</type>
</CustomField>