force-app/main/default/objects/SFDC_Projects__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>R00N60000001VqqUEAS</relationshipName>
    <type>Lookup</type>
</CustomField>