force-app/main/default/objects/SFDC_Projects__c/fields/Outlook_Edition__c.field-meta.xml
<CustomField>
    <fullName>Outlook_Edition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Outlook Edition</label>
    <type>Checkbox</type>
</CustomField>