force-app/main/default/objects/SFDC_Projects__c/fields/Performed_BPR__c.field-meta.xml
<CustomField>
    <fullName>Performed_BPR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Performed BPR</label>
    <type>Checkbox</type>
</CustomField>