force-app/main/default/objects/SFDC_Projects__c/fields/Performed_Kickoff_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Performed_Kickoff_Meeting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Performed Kickoff Meeting</label>
    <type>Checkbox</type>
</CustomField>