force-app/main/default/objects/SFDC_Projects__c/fields/Performed_Training__c.field-meta.xml
<CustomField>
    <fullName>Performed_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Performed Training</label>
    <type>Checkbox</type>
</CustomField>