force-app/main/default/objects/SFDC_Projects__c/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Products</label>
    <type>Checkbox</type>
</CustomField>