force-app/main/default/objects/SFDC_Projects__c/fields/Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager__c</fullName>
    <label>Project Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>