force-app/main/default/objects/SFDC_Projects__c/fields/Project_Stage__c.field-meta.xml
<CustomField>
    <fullName>Project_Stage__c</fullName>
    <label>Project Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open for offers</fullName>
            </value>
            <value>
                <fullName>Evaluating offers</fullName>
            </value>
            <value>
                <fullName>Live - Design</fullName>
            </value>
            <value>
                <fullName>Live - Implemented</fullName>
            </value>
            <value>
                <fullName>Completed &amp; Accepted</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>