force-app/main/default/objects/SFDC_Projects__c/fields/Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Type__c</fullName>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>QSA</fullName>
            </value>
            <value>
                <fullName>QSO</fullName>
            </value>
            <value>
                <fullName>QSI</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>DM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>