force-app/main/default/objects/SFDC_Projects__c/fields/Received_Data__c.field-meta.xml
<CustomField>
    <fullName>Received_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Received Data</label>
    <type>Checkbox</type>
</CustomField>