force-app/main/default/objects/SFDC_Projects__c/fields/Received_login__c.field-meta.xml
<CustomField>
    <fullName>Received_login__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Received login</label>
    <type>Checkbox</type>
</CustomField>