force-app/main/default/objects/SFDC_Projects__c/fields/Received_Questionnaire_back__c.field-meta.xml
<CustomField>
    <fullName>Received_Questionnaire_back__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Received Questionnaire back</label>
    <type>Checkbox</type>
</CustomField>