force-app/main/default/objects/SFDC_Projects__c/fields/Record_Types__c.field-meta.xml
<CustomField>
    <fullName>Record_Types__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Record Types</label>
    <type>Checkbox</type>
</CustomField>