force-app/main/default/objects/SFDC_Projects__c/fields/Requested_Data__c.field-meta.xml
<CustomField>
    <fullName>Requested_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requested Data</label>
    <type>Checkbox</type>
</CustomField>