force-app/main/default/objects/SFDC_Projects__c/fields/Scheduled_BPR__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_BPR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scheduled BPR</label>
    <type>Checkbox</type>
</CustomField>