force-app/main/default/objects/SFDC_Projects__c/fields/Scheduled_Kickoff_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Kickoff_Meeting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scheduled Kickoff Meeting</label>
    <type>Checkbox</type>
</CustomField>