force-app/main/default/objects/SFDC_Projects__c/fields/Scheduled_Training__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scheduled Training</label>
    <type>Checkbox</type>
</CustomField>