force-app/main/default/objects/SFDC_Projects__c/fields/Self_Service_Portal__c.field-meta.xml
<CustomField>
    <fullName>Self_Service_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Self Service Portal</label>
    <type>Checkbox</type>
</CustomField>