force-app/main/default/objects/SFDC_Projects__c/fields/Sent_Intro_Email_Call__c.field-meta.xml
<CustomField>
    <fullName>Sent_Intro_Email_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent Intro Email/Call</label>
    <type>Checkbox</type>
</CustomField>