force-app/main/default/objects/SFDC_Projects__c/fields/Sent_Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>Sent_Questionnaire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent Questionnaire</label>
    <type>Checkbox</type>
</CustomField>