force-app/main/default/objects/SFDC_Projects__c/fields/sForce_Controls__c.field-meta.xml
<CustomField>
    <fullName>sForce_Controls__c</fullName>
    <defaultValue>false</defaultValue>
    <label>sForce Controls</label>
    <type>Checkbox</type>
</CustomField>