force-app/main/default/objects/SFDC_Projects__c/fields/Solution_Validation__c.field-meta.xml
<CustomField>
    <fullName>Solution_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solution Validation</label>
    <type>Checkbox</type>
</CustomField>