force-app/main/default/objects/SFDC_Projects__c/fields/Solutions__c.field-meta.xml
<CustomField>
    <fullName>Solutions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solutions</label>
    <type>Checkbox</type>
</CustomField>