force-app/main/default/objects/SFDC_Projects__c/fields/Training__c.field-meta.xml
<CustomField>
    <fullName>Training__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Training</label>
    <type>Checkbox</type>
</CustomField>