force-app/main/default/objects/SFDC_Projects__c/fields/Web_Integration_Links__c.field-meta.xml
<CustomField>
    <fullName>Web_Integration_Links__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Web Integration Links</label>
    <type>Checkbox</type>
</CustomField>