force-app/main/default/objects/SFDC_Projects__c/fields/Web_to_Leads__c.field-meta.xml
<CustomField>
    <fullName>Web_to_Leads__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Web-to-Leads</label>
    <type>Checkbox</type>
</CustomField>