force-app/main/default/objects/SFDC_Projects__c/listViews/AllProjects.listView-meta.xml
<ListView>
    <fullName>AllProjects</fullName>
    <columns>NAME</columns>
    <columns>Project_Stage__c</columns>
    <columns>Project_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Projects</label>
</ListView>