force-app/main/default/objects/SFDC_Projects__c/listViews/ProjectsOpenforOffers.listView-meta.xml
<ListView>
    <fullName>ProjectsOpenforOffers</fullName>
    <columns>NAME</columns>
    <columns>Project_Stage__c</columns>
    <columns>Project_Type__c</columns>
    <columns>Edition__c</columns>
    <columns>Licenses__c</columns>
    <columns>Amount__c</columns>
    <columns>Location__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project_Stage__c</field>
        <operation>contains</operation>
        <value>open</value>
    </filters>
    <label>Projects Open for Offers</label>
</ListView>